# Veria

./: .blitzyignore  .cursorignore  .dockerignore  .env.example  .env.test  .github-account  .gitignore  .mcp.json  ACTION-REQUIRED-Credentials-setup.md  BLITZY_HANDOFF_README.md  BLITZY_HANDOFF_SUMMARY.txt  BLITZY_SETUP.md  CLAUDE.md  CLAUDEFLOW_INTEGRATION.md  CODEOWNERS  CONSOLIDATION_COMPLETE.md  Claude-prompt-veria-frontend.md  DEVASSIST-FIX-SUMMARY.md  DEVASSIST-VALIDATION.md  DEVASSIST_EVALUATION.md  DEVASSIST_INTEGRATION.md  DEVELOPMENT_GUIDE.md  DOCUMENTATION_STATUS.md  Dockerfile  EXPERT-DEVASSIST-GUIDANCE.md  INTEGRATION-COMPLETE.md  MASTER_PROMPT_FOR_CLAUDE_CODE.txt  MIGRATION_COMPLETE.md  MIGRATION_LOG.md  Makefile  NEXT_STEPS.md  PRD.md  PROJECT_STATUS.md  README-BUNDLE.md  README.md  ROADMAP_2025.md  ROADMAP_AND_SPRINTS.md  SESSION_MANAGEMENT_SETUP.md  SESSION_MANAGER_VERIFIED.md  SPRINT_0_CLEANUP.md  (+31 more)
.devassist/: .no-generic  architectural_decisions.md  config.json  indexed_files.txt  orchestrator-state.json  package-lock.json  package.json  priorities.json  server.js  session_insights.md  show-tools.js  veria-commands.js  veria-mcp-server.js  veria-server.js  warmup.js
.github/: branch-protection.yml
.husky/: pre-commit
api-gateway/: README.md  package-lock.json  package.json  test-jwt.js
blitzy/: README.md  blitzy_manifest.yaml
claudeflow/: README.md
contracts/: hardhat.config.js  package-lock.json  package.json
dashboard/: README.md  next.config.js  package-lock.json
devassist/: README.md
docs/: API.md  ARCHITECTURE.md  BLITZY_HANDOFF.md  (+30 more)
(+566 files in other folders)
