
[tool.poetry]
name = "compliance-middleware"
version = "0.1.0"
description = "AI-native distribution & compliance middleware for tokenized RWAs"
authors = ["Daniel Connolly <daniel@example.com>"]
readme = "README.md"
packages = [{ include = "packages" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
qdrant-client = "^1.10.1"
redis = "^5.0.4"
httpx = "^0.27.0"
orjson = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
mypy = "^1.10.0"
types-redis = "^4.6.0.20240425"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
